
apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'itx.examples.jetty.server.Main'

applicationDefaultJvmArgs = ["-Xms64M", "-Xmx64M" ]

sourceCompatibility = 11
targetCompatibility = 11

repositories {
   mavenCentral()
}

dependencies {
   compile 'org.eclipse.jetty:jetty-server:9.4.11.v20180605'
   compile 'org.eclipse.jetty:jetty-servlet:9.4.11.v20180605'
   compile 'org.eclipse.jetty.http2:http2-server:9.4.11.v20180605'
   compile 'org.eclipse.jetty.http2:http2-client:9.4.11.v20180605'
   compile 'org.eclipse.jetty.http2:http2-http-client-transport:9.4.11.v20180605'
   compile 'org.eclipse.jetty:jetty-alpn-server:9.4.11.v20180605'
   compile 'org.eclipse.jetty:jetty-client:9.4.11.v20180605'
   compile 'org.eclipse.jetty.websocket:websocket-api:9.4.11.v20180605'
   compile 'org.eclipse.jetty.websocket:websocket-server:9.4.11.v20180605'
   compile 'org.eclipse.jetty.websocket:websocket-client:9.4.11.v20180605'

   compile 'org.eclipse.jetty:jetty-alpn-java-server:9.4.11.v20180605'
   compile 'org.eclipse.jetty:jetty-alpn-java-client:9.4.11.v20180605'

   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
   compile 'javax.xml.bind:jaxb-api:2.3.0'

   compile 'org.glassfish.jersey.core:jersey-server:2.27'
   compile 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.27'
   compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.27'
   compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
   compile 'org.glassfish.jersey.inject:jersey-hk2:2.27'

   compile 'org.jboss.resteasy:resteasy-servlet-initializer:3.6.0.Final'
   compile 'javax.servlet:javax.servlet-api:4.0.1'

   compile 'org.slf4j:slf4j-api:1.8.0-beta2'
   compile 'org.slf4j:slf4j-simple:1.8.0-beta2'

   testCompile 'org.testng:testng:6.14.3'
}


